# dsts-formats

./: CMakeLists.txt  geom.hexpat  nlst_types.txt  shaderParam.hexpat
addon/: __init__.py  material.py  mesh.py  skeleton.py  utils.py
addon/data/: shaderDataNode.py
notes/: geom.hexpat
src/: main.cpp
src/geom/: enums.hpp  geom.cpp  material.cpp  mesh.cpp  mesh.hpp  skeleton.cpp  stringSection.cpp
src/geom/binary/: clut.hpp  enums.hpp  geom.hpp  material.hpp  mesh.hpp  name_table.hpp  skeleton.hpp
src/python/: bindings.cpp  bindings.hpp  geom.cpp  material.cpp  mesh.cpp  skeleton.cpp
src/utils/: align.cpp  float16.cpp  hash.cpp  matrix.cpp  memory_buffer.cpp  quaternion.cpp  stream.cpp  vector.cpp
